Add 'Stop Timer' button to timer screen

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ camera</textarea>
   <div id="timerScreen" class="screen hidden">
     <h2>Discussion Timer</h2>
     <div id="timerDisplay">60</div>
-
+    <button onclick="stopTimer()">Stop Timer</button>
     <button id="showImpostorsBtn" class="hidden" onclick="showImpostors()">Reveal Impostors</button>
   </div>
 
