Enhance final screen with button and corrected heading
Updated the final screen to include a 'Play Again' button and corrected the heading from 'imposters' to 'Impostors'.

--- a/index.html
+++ b/index.html
@@ -70,10 +70,12 @@ camera</textarea>
 
 
   <!-- Final Reveal Screen -->
-  <div id="finalScreen" class="screen hidden">
-    <h2>imposters</h2>
-    <div id="imposterList"></div>
-  </div>
+<div id="finalScreen" class="screen hidden">
+  <h2>Impostors</h2>
+  <div id="impostorList"></div>
+
+  <button onclick="returnToMenu()">Play Again</button>
+</div>
 
   <script src="script.js"></script>
 </body>
