--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@ camera</textarea>
 
   <!-- Final Reveal Screen -->
 <div id="finalScreen" class="screen hidden">
-  <h2>Impostors</h2>
-  <div id="impostorList"></div>
+  <h2>imposters</h2>
+  <div id="imposterList"></div>
 
   <button onclick="returnToMenu()">Play Again</button>
 </div>
